--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,7 @@
-pandas~=2.0.2
-dash~=2.9.3
+pandas
+dash
 dcc
-BeautifulSoup~=4.12.0
-requests~=2.28.2
-plotly~=5.14.1
+BeautifulSoup
+requests
+plotly
 dash_boostrap_templates
-gunicorn 
-beautifulsoup4~=4.12.2
-selenium~=4.8.3
-numpy~=1.24.2
-cryptography~=41.0.0
-pytz~=2023.3
-six~=1.16.0
-setuptools~=65.5.1
-PyAutoGUI~=0.9.53
